2008-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-conf.el (emacs-internal): New coding system alias.

2008-09-05  Chong Yidong  <cyd@stupidchicken.com>

	* Version 22.3 released.

2008-09-03  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-version): Increment to 5.31.6.

2008-09-03  Masatake YAMATO  <jet@gyve.org>

	* progmodes/cc-fonts.el (gtkdoc-font-lock-doc-comments): Highlight
	name of parameters in document body.  (sync from trunk 2007-08-23)

2008-08-30  Glenn Morris  <rgm@gnu.org>

	* subr.el (make-variable-frame-local): Tweak obsolescence message.

2008-08-29  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el (image-mode): Fix 2008-07-19 change.

2008-08-26  Juanma Barranquero  <lekktu@gmail.com>

	* facemenu.el (facemenu-unlisted-faces): Fix obsolescence declaration.

	* hi-lock.el (hi-lock-mode): Fix typo in docstring.

	* icomplete.el (icomplete-compute-delay, icomplete-get-keys): Doc fixes.
	(icomplete-delay-completions-threshold): Fix typo in docstring.

	* speedbar.el (speedbar-stealthy-function-list)
	(speedbar-verbosity-level, speedbar-supported-extension-expressions)
	(speedbar-update-current-file, speedbar-add-indicator)
	(speedbar-tag-expand): Reflow docstrings.
	(speedbar-use-imenu-flag, speedbar-use-tool-tips-flag)
	(speedbar-ignored-directory-regexp, speedbar-file-unshown-regexp)
	(speedbar-file-regexp, speedbar-message, speedbar-item-info)
	(speedbar-files-item-info, speedbar-fetch-replacement-function)
	(speedbar-maybe-add-localized-support)
	(speedbar-generic-list-positioned-group-p, speedbar-insert-generic-list)
	(speedbar-extract-one-symbol, speedbar-recenter-to-top)
	(speedbar-recenter, speedbar-separator-face): Fix typos in docstrings.
	(speedbar-ignored-directory-expressions, speedbar-handle-delete-frame)
	(speedbar-show-info-under-mouse, speedbar-directory-buttons)
	(speedbar-check-vc-this-line, speedbar-files-line-directory)
	(speedbar-buffer-buttons, speedbar-buffer-buttons-temp)