@@ -1,3 +1,7 @@
+2008-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* international/mule-conf.el: Fix last change.
+
 2008-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* international/mule-conf.el (emacs-internal): New coding system alias.
